crates/solite-stdlib/src/snapshots/solite_stdlib__tests__stdlib_basic-3.snap
---
source: crates/solite-stdlib/src/lib.rs
expression: solite_only_functions
snapshot_kind: text
---
- base64
- clipboard_set
- csv_at
- csv_line_number
- csv_path
- decimal
- decimal_add
- decimal_cmp
- decimal_exp
- decimal_mul
- decimal_pow2
- decimal_sub
- decimal_sum
- editdist3
- http_debug
- http_get_body
- http_request
- http_version
- ieee754
- ieee754_exponent
- ieee754_from_blob
- ieee754_from_int
- ieee754_inc
- ieee754_mantissa
- ieee754_to_blob
- ieee754_to_int
- lsmode
- path_at
- path_debug
- path_version
- readfile
- realpath
- regex
- regex_capture
- regex_debug
- regex_find
- regex_find_at
- regex_print
- regex_replace
- regex_replace_all
- regex_valid
- regex_version
- regexp
- regexset
- regexset_is_match
- regexset_print
- sha1
- sha1_query
- sha1b
- sha3
- sha3_agg
- sha3_query
- solite_stdlib_version
- spellfix1_editdist
- spellfix1_phonehash
- spellfix1_scriptcode
- spellfix1_translit
- str_contains
- str_lower
- str_lower_ascii
- str_replace
- str_upper
- str_upper_ascii
- str_version
- tsv_at
- tsv_line_number
- tsv_path
- ulid
- ulid_bytes
- ulid_datetime
- ulid_debug
- ulid_version
- ulid_with_datetime
- ulid_with_prefix
- url_debug
- url_escape
- url_fragment
- url_host
- url_path
- url_port
- url_query
- url_scheme
- url_valid
- url_version
- usleep
- uuid
- uuid_blob
- uuid_str
- vec_add
- vec_bit
- vec_debug
- vec_distance_cosine
- vec_distance_hamming
- vec_distance_l1
- vec_distance_l2
- vec_f32
- vec_int8
- vec_length
- vec_normalize
- vec_quantize_binary
- vec_quantize_int8
- vec_slice
- vec_sub
- vec_to_json
- vec_type
- vec_version
- writefile
- xsv_at
- xsv_debug
- xsv_line_number
- xsv_path
- xsv_version
