crates/solite-stdlib/src/snapshots/solite_stdlib__tests__stdlib_basic-4.snap
---
source: crates/solite-stdlib/src/lib.rs
expression: BUILTIN_FUNCTIONS
snapshot_kind: text
---
- "->"
- "->>"
- abs
- avg
- changes
- char
- coalesce
- count
- cume_dist
- current_date
- current_time
- current_timestamp
- date
- datetime
- dense_rank
- first_value
- format
- glob
- group_concat
- hex
- ifnull
- iif
- instr
- json
- json_array
- json_array_length
- json_extract
- json_group_array
- json_group_object
- json_insert
- json_object
- json_patch
- json_quote
- json_remove
- json_replace
- json_set
- json_type
- json_valid
- julianday
- lag
- last_insert_rowid
- last_value
- lead
- length
- like
- likelihood
- likely
- load_extension
- lower
- ltrim
- max
- min
- nth_value
- ntile
- nullif
- percent_rank
- printf
- quote
- random
- randomblob
- rank
- replace
- round
- row_number
- rtrim
- sign
- soundex
- sqlite_compileoption_get
- sqlite_compileoption_used
- sqlite_log
- sqlite_source_id
- sqlite_version
- strftime
- substr
- substring
- subtype
- sum
- time
- total
- total_changes
- trim
- typeof
- unhex
- unicode
- unixepoch
- unlikely
- upper
- zeroblob
