crates/solite-stdlib/src/snapshots/solite_stdlib__tests__stdlib_basic.snap
---
source: crates/solite-stdlib/src/lib.rs
expression: "db.query_row(\"select sqlite_version();\", [], |r| r.get::<usize,\nString>(0)).unwrap()"
snapshot_kind: text
---
3.53.0
